# 05.PROJ

./: CMakeLists.txt  Doxyfile  README.md  diagram.drawio
.github/workflows/: release.yaml
lib/core/: Controller.cpp  Controller.h  Handler.cpp  Handler.h  IView.h  Model.cpp  Model.h  ModelData.h  View.cpp  View.h  ViewHandler.cpp  ViewHandler.h  Widget.cpp  Widget.h  WidgetModel.cpp  WidgetModel.h  WidgetModelData.h  WidgetView.cpp  WidgetView.h
lib/widgets/: Application.cpp  Application.h  Button.cpp  Button.h  EditBox.cpp  EditBox.h  Window.cpp  Window.h
src/: FileManager.cpp  FileManager.h  IpApp.cpp  IpApp.h  common.h  main.cpp
